# atomic-agents

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  BENCHMARK_IMPROVEMENT_PLAN.md  DEV_GUIDE.md  LICENSE  MANIFEST.in  POWER.md  PROGRESS.md  README.md  UPGRADE_DOC.md  agents.md  build_and_deploy.ps1  clean_proj.ps1  greptile.json  note.md  opencode.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
atomic-assembler/: .gitignore  pyproject.toml
atomic-assembler/atomic_assembler/: __init__.py  app.py  color_utils.py  constants.py  main.py  utils.py
atomic-assembler/atomic_assembler/screens/: atomic_tool_explorer.py  file_explorer.py  main_menu.py  tool_info_screen.py
atomic-assembler/atomic_assembler/widgets/: confirmation_modal.py  generic_list.py  gradient_title.py  icon_selection_list.py  menu.py  new_item_input.py  tool_info_display.py
atomic-examples/ag2-orchestration/: README.md  main.py  pyproject.toml
atomic-examples/basic-multimodal/: README.md  pyproject.toml
atomic-examples/basic-multimodal/basic_multimodal/: main.py
atomic-examples/basic-pdf-analysis/: README.md  pyproject.toml
atomic-examples/basic-pdf-analysis/basic_pdf_analysis/: main.py
atomic-examples/deep-research/: README.md  mermaid.md  pyproject.toml
atomic-examples/deep-research/deep_research/: __main__.py  config.py  context_providers.py  main.py  state.py
atomic-examples/deep-research/deep_research/agents/: choice_agent.py  decider_agent.py  extractor_agent.py  planner_agent.py  qa_agent.py  query_agent.py  reflector_agent.py  writer_agent.py
atomic-examples/deep-research/deep_research/tools/: searxng_search.py  webpage_scraper.py
atomic-examples/dspy-integration/: README.md  pyproject.toml
atomic-examples/dspy-integration/dspy_integration/: __init__.py  bridge.py  main.py  schemas.py
atomic-examples/dspy-integration/dspy_integration/domain/: __init__.py  datasets.py  evaluation.py  models.py
atomic-examples/dspy-integration/dspy_integration/presentation/: __init__.py  console.py
atomic-examples/dspy-integration/dspy_integration/stages/: __init__.py  stage1_dspy.py  stage2_atomic.py  stage3_combined.py
atomic-examples/fastapi-memory/: README.md  pyproject.toml  test_api.py
atomic-examples/fastapi-memory/fastapi_memory/: __init__.py  client.py  main.py
atomic-examples/fastapi-memory/fastapi_memory/lib/: __init__.py  config.py  schemas.py
atomic-examples/hooks-example/: README.md  pyproject.toml
atomic-examples/hooks-example/hooks_example/: main.py
atomic-examples/mcp-agent/example-client/: README.md  pyproject.toml
atomic-examples/mcp-agent/example-client/example_client/: main.py  main_fastapi.py  main_http.py  main_sse.py  main_stdio.py  main_stdio_async.py
atomic-examples/mcp-agent/example-client/fastapi_client/: main.py
atomic-examples/mcp-agent/example-mcp-server/: README.md  demo_tools.py  pyproject.toml
atomic-examples/mcp-agent/example-mcp-server/example_mcp_server/: __init__.py  server.py  server_http.py  server_sse.py  server_stdio.py
atomic-examples/nested-multimodal/: README.md  pyproject.toml
atomic-examples/nested-multimodal/nested_multimodal/: __init__.py  main.py
atomic-examples/nested-multimodal/test_media/: .gitkeep
atomic-examples/orchestration-agent/: README.md  pyproject.toml
atomic-examples/orchestration-agent/orchestration_agent/: orchestrator.py
atomic-examples/orchestration-agent/orchestration_agent/tools/: calculator.py  searxng_search.py
atomic-examples/progressive-disclosure/: README.md  pyproject.toml
atomic-examples/progressive-disclosure/progressive_disclosure/: __init__.py  main.py
atomic-examples/quickstart/: README.md  pyproject.toml
atomic-examples/quickstart/quickstart/: 1_0_basic_chatbot.py  1_1_basic_chatbot_streaming.py  1_2_basic_chatbot_async_streaming.py  1_2_basic_chatbot_sync_streaming.py  1_basic_chatbot.py  2_basic_custom_chatbot.py  3_0_basic_custom_chatbot_with_custom_schema.py  3_1_basic_custom_chatbot_with_custom_schema_streaming.py  3_basic_custom_chatbot_with_custom_schema.py  4_basic_chatbot_different_providers.py  5_custom_system_role_for_reasoning_models.py  6_0_asynchronous_processing.py  6_1_asynchronous_processing_streaming.py  6_asynchronous_processing.py  6_asynchronous_processing_streaming.py  7_asynchronous_processing.py  7_asynchronous_processing_batch.py  basic_custom_chatbot.py  basic_custom_chatbot_with_custom_schema.py  main.py
atomic-examples/rag-chatbot/: .gitignore  README.md  pyproject.toml
atomic-examples/rag-chatbot/rag_chatbot/: .gitignore  config.py  context_providers.py  main.py
atomic-examples/rag-chatbot/rag_chatbot/agents/: qa_agent.py  (+1 more)
atomic-examples/web-search-agent/: README.md  pyproject.toml
atomic-examples/web-search-agent/web_search_agent/: main.py
atomic-examples/youtube-to-recipe/: README.md  pyproject.toml
atomic-examples/youtube-to-recipe/youtube_to_recipe/: agent.py  main.py
atomic-forge/atomic_tools/calculator/: README.md  pyproject.toml  requirements.txt
atomic-forge/atomic_tools/tavily_search/: pyproject.toml  requirements.txt
atomic-forge/atomic_tools/youtube_transcript_scraper/: .coveragerc  README.md  example.env  pyproject.toml  requirements.txt
atomic-forge/tools/atomic_scraper_tool/: ARCHITECTURE.md  CHANGELOG.md  INTEGRATION_GUIDE.md  LICENSE  README.md  demo_adaptive_analysis.py  demo_enhanced_navigation.py  main.py  pr_body.txt  pyproject.toml  requirements.txt  setup.py
atomic-forge/tools/calculator/: README.md  pyproject.toml
atomic-forge/tools/datetime_tool/: README.md  pyproject.toml  requirements.txt
atomic-forge/tools/fia_signals/: README.md  pyproject.toml  requirements.txt
atomic-forge/tools/searxng_search/: .coveragerc  README.md  pyproject.toml
atomic-forge/tools/tavily_search/: README.md  pyproject.toml  requirements.txt
atomic-forge/tools/weather/: README.md  pyproject.toml  requirements.txt
atomic-forge/tools/webpage_scraper/: README.md  pyproject.toml  requirements.txt
atomic-forge/tools/youtube_transcript_scraper/: README.md  pyproject.toml  requirements.txt
(+541 files in other folders)
