[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomic-agents"
version = "2.6.0"
description = "A versatile framework for creating and managing intelligent agents."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "instructor==1.13.0",
    "pydantic>=2.11.0,<3.0.0",
    "rich>=13.7.1,<14.0.0",
    "gitpython>=3.1.43,<4.0.0",
    "pyfiglet>=1.0.2,<2.0.0",
    "textual>=5.3.0,<6.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "requests>=2.32.3,<3.0.0",
    "mcp[cli]>=1.6.0",
    "litellm>=1.50.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/BrainBlend-AI/atomic-agents"
Repository = "https://github.com/BrainBlend-AI/atomic-agents"

[project.scripts]
atomic = "atomic_assembler.main:main"

[dependency-groups]
dev = [
    "black>=24.8.0,<25.0.0",
    "flake8>=7.1.1,<8.0.0",
    "pdoc3>=0.11.1,<1.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "openai>=2.0.0,<3.0.0",
    "sphinx>=7.2.6,<8.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
    "myst-parser>=2.0.0,<3.0.0",
    "sphinx-copybutton>=0.5.2,<1.0.0",
    "sphinx-design>=0.5.0,<1.0.0",
    "sphinx-autobuild>=2024.2.4,<2025.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "markdownify>=0.9.0,<1.0.0",
    "sphinxcontrib-mermaid>=1.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["atomic-agents/atomic_agents", "atomic-assembler/atomic_assembler"]

[tool.uv.workspace]
members = [
    "atomic-examples/*",
    "atomic-examples/mcp-agent/*",
    "atomic-forge/tools/*",
]
exclude = [
    "atomic-examples/.claude",
    "atomic-examples/claude-structured-output",
    "atomic-examples/mcp-agent",
]

[tool.black]
line-length = 127
