[project]
name = "atomic-assembler"
version = "2.0.5"
description = "CLI tool for managing Atomic Agents components"
authors = [{name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.12,<4.0"
dependencies = [
    "atomic-agents",
    "textual>=5.3.0,<6.0.0",
    "rich>=13.7.1,<14.0.0",
    "pyfiglet>=1.0.2,<2.0.0"
]

[project.scripts]
atomic = "atomic_assembler.main:main"

[project.urls]
Homepage = "https://github.com/BrainBlend-AI/atomic-agents"
Repository = "https://github.com/BrainBlend-AI/atomic-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
packages = ["atomic_assembler"]

[tool.uv.sources]
atomic-agents = { workspace = true }