[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ag2_orchestration"]

[project]
name = "ag2-orchestration"
version = "0.1.0"
description = "AG2 multi-agent orchestration example using Atomic Agents typed tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "ag2[openai]>=0.11.2,<1.0",
    "sympy>=1.13.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
