[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["basic_multimodal"]

[project]
name = "basic-multimodal"
version = "1.0.0"
description = "Basic Multimodal Quickstart example for Atomic Agents"
readme = "README.md"
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "instructor==1.14.5",
    "openai>=2.0.0,<3.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
