[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["basic_pdf_analysis"]

[project]
name = "basic-pdf-analysis"
version = "1.0.0"
description = "Basic PDF analysis Quickstart example for Atomic Agents"
readme = "README.md"
authors = [
    { name = "Renaud Dufour", email = "renaud.dufour59@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "atomic-agents",
    "instructor==1.13.0",
    "google-genai>=1.18.0,<2.0.0",
    "jsonref>=1.1.0,<2.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
