[project]
name = "deep-research"
version = "0.1.0"
description = "Deep Research example for Atomic Agents"
authors = [{name = "Kenny Vaneetvelde", email = "kenny@brainblendai.com"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "atomic-agents",
    "requests>=2.32.3,<3.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "markdownify>=0.13.1,<1.0.0",
    "readability-lxml>=0.8.1,<1.0.0",
    "lxml-html-clean>=0.4.0,<1.0.0",
    "lxml>=5.3.0,<6.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "openai>=1.35.12,<2.0.0",
    "trafilatura>=1.6.3,<2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["deep_research"]

[tool.uv.sources]
atomic-agents = { workspace = true }
