[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deep_research"]

[project]
name = "deep-research"
version = "0.1.0"
description = "Deep research example for Atomic Agents"
readme = "README.md"
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny@brainblendai.com" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "requests>=2.32.3,<3.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "markdownify>=0.13.1,<1.0.0",
    "readability-lxml>=0.8.1,<1.0.0",
    "lxml-html-clean>=0.4.0,<1.0.0",
    "lxml>=5.3.0,<6.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "openai>=2.0.0,<3.0.0",
    "trafilatura>=1.6.3,<2.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
