[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dspy_integration"]

[project]
name = "dspy-integration"
version = "1.0.0"
description = "DSPy + Atomic Agents integration example - combining prompt optimization with type-safe structured outputs"
readme = "README.md"
authors = [
    { name = "BrainBlend AI", email = "kenny@brainblendai.com" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "dspy>=2.5.0",
    "instructor>=1.7.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.3.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
