[tool.poetry]
name = "fastapi-memory"
version = "0.1.0"
description = "Simple FastAPI integration example with Atomic Agents"
authors = ["BrainBlend AI"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
atomic-agents = {path = "../..", develop = true}
fastapi = "^0.115.14"
uvicorn = "^0.32.1"
instructor = "==1.13.0"
openai = ">=2.0.0,<3.0.0"
pydantic = ">=2.10.3,<3.0.0"
httpx = "^0.28.1"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
