[tool.poetry]
name = "hooks-example"
version = "1.0.0"
description = "AtomicAgent hooks system example demonstrating monitoring, error handling, and retry mechanisms"
authors = ["Kenny Vaneetvelde <kenny.vaneetvelde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
atomic-agents = {path = "../..", develop = true}
instructor = "==1.13.0"
openai = ">=2.0.0,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"