[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nested_multimodal"]

[project]
name = "nested-multimodal"
version = "1.0.0"
description = "Example demonstrating nested multimodal content support in Atomic Agents (Issue #141)"
readme = "README.md"
authors = [
    { name = "Atomic Agents Team" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "atomic-agents",
    "instructor>=1.7.0",
    "google-genai>=1.18.0,<2.0.0",
    "jsonref>=1.1.0,<2.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
