[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestration_agent"]

[project]
name = "orchestration-agent"
version = "0.1.0"
description = "Orchestration agent example for Atomic Agents"
readme = "README.md"
authors = [
    { name = "KennyVaneetvelde", email = "kenny@inosta.be" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "instructor==1.13.0",
    "pydantic>=2.10.3,<3.0.0",
    "sympy>=1.13.3,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "openai>=2.0.0,<3.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
