[project]
name = "quickstart"
version = "1.0.0"
description = "Quickstart example for Atomic Agents"
authors = [{name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "atomic-agents",
    "instructor>=1.9.2,<2.0.0",
    "openai>=1.35.12,<2.0.0",
    "groq>=0.11.0,<1.0.0",
    "mistralai>=1.1.0,<2.0.0",
    "anthropic>=0.39.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["quickstart"]

[tool.uv.sources]
atomic-agents = { workspace = true }
