[project]
name = "rag-chatbot"
version = "0.1.0"
description = "A RAG chatbot example using Atomic Agents and ChromaDB/Qdrant"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "atomic-agents",
    "chromadb>=1.0.20,<2.0.0",
    "qdrant-client>=1.15.1,<2.0.0",
    "numpy>=2.3.2,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "openai>=1.100.2,<2.0.0",
    "pulsar-client>=3.8.0,<4.0.0",
    "rich>=13.7.0,<14.0.0",
    "wget>=3.2,<4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["rag_chatbot"]

[tool.uv.sources]
atomic-agents = { workspace = true }
