[tool.poetry]
name = "web-search-agent"
version = "1.0.0"
description = "Web search agent example for Atomic Agents"
authors = ["Kenny Vaneetvelde <kenny.vaneetvelde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
atomic-agents = {path = "../..", develop = true}
openai = ">=2.0.0,<3.0.0"
pydantic = ">=2.9.2,<3.0.0"
instructor = "==1.13.0"
python-dotenv = ">=1.0.1,<2.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
