[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web_search_agent"]

[project]
name = "web-search-agent"
version = "1.0.0"
description = "Web search agent example for Atomic Agents"
readme = "README.md"
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "openai>=2.0.0,<3.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "instructor==1.13.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
