[project]
name = "youtube-to-recipe"
version = "1.0.0"
description = "Youtube Recipe Extractor example for Atomic Agents"
authors = [{name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "atomic-agents",
    "openai>=1.35.12,<2.0.0",
    "pydantic>=2.10.3,<3.0.0",
    "google-api-python-client>=2.101.0,<3.0.0",
    "youtube-transcript-api>=1.1.1,<2.0.0",
    "instructor>=1.5.2,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["youtube_to_recipe"]

[tool.uv.sources]
atomic-agents = { workspace = true }
