[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_to_recipe"]

[project]
name = "youtube-to-recipe"
version = "1.0.0"
description = "Youtube Recipe Extractor example for Atomic Agents"
readme = "README.md"
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "atomic-agents",
    "openai>=2.0.0,<3.0.0",
    "pydantic>=2.10.3,<3.0.0",
    "google-api-python-client>=2.101.0,<3.0.0",
    "youtube-transcript-api>=1.1.1,<2.0.0",
    "instructor==1.13.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
