[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_client"]

[project]
name = "example-client"
version = "0.1.0"
description = "Example: Choosing the right MCP tool for a user query using the MCP Tool Factory."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "example-mcp-server",
    "pydantic>=2.10.3,<3.0.0",
    "rich>=13.0.0",
    "openai>=2.0.0,<3.0.0",
    "mcp[cli]>=1.9.4",
    "fastapi>=0.115.14,<1.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
example-mcp-server = { workspace = true }
