[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_mcp_server"]

[project]
name = "example-mcp-server"
version = "0.1.0"
description = "example-mcp-server MCP server"
authors = []
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.4",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.15.0",
]

[project.scripts]
example-mcp-server = "example_mcp_server.server:main"
