[project]
name = "atomic-tools-tavily-search"
version = "0.1.0"
description = "Tavily search tool for atomic-agents"
requires-python = ">=3.10"
dependencies = ["aiohttp", "pydantic"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
