[project]
name = "youtube_transcript_scraper"
version = "1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "google_api_python_client>=2.114.0,<3",
    "pydantic>=2.9.1,<3",
    "youtube_transcript_api>=0.6.2,<1",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[tool.uv.sources]
atomic-agents = { path = "../../../atomic-agents" }
