[tool.poetry]
name = "atomic-scraper-tool"
version = "0.1.0"
description = "AI-powered web scraping tool with intelligent strategy planning and structured data extraction"
authors = ["Atomic Agents Team"]
readme = "README.md"

[tool.poetry.scripts]
atomic-scraper = "main:main"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
atomic-agents = ">=2.0.0"
requests = ">=2.32.3"
beautifulsoup4 = ">=4.12.3"
markdownify = ">=0.9.0"
pydantic = ">=2.11.0"
instructor = ">=1.9.0"
openai = ">=1.35.12"
rich = ">=13.7.1"
python-dotenv = ">=1.0.0"
lxml = "^5.3.0"
readability-lxml = "^0.8.1"
lxml-html-clean = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 127

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
