[project]
name = "calculator"
version = "1.0.0"
description = "Calculator tool for Atomic Agents"
authors = [{name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "atomic-agents",
    "pydantic>=2.10.3,<3.0.0",
    "sympy>=1.12,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.6.1,<8.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest>=8.3.3,<9.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
atomic-agents = { workspace = true }
