[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tool"]

[project]
name = "calculator"
version = "1.0.0"
description = "Calculator tool for Atomic Agents"
readme = "README.md"
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "pydantic>=2.10.3,<3.0.0",
    "sympy>=1.12,<2.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.1,<8.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest>=8.3.3,<9.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
